# Procamera

./: .gitignore  README.md  android_recording_app_prompt_v2 (1).md  build.gradle.kts  gradle.properties  progress_summary.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/buffer/: SpscRingBuffer.h
app/src/main/cpp/common/: Log.h  Result.h  TripleBuffer.h
app/src/main/cpp/dsp/: BiquadEq.cpp  BiquadEq.h  EncoderPcmConverter.cpp  EncoderPcmConverter.h  HighPassFilter.cpp  HighPassFilter.h  InputGain.cpp  InputGain.h  MakeupGain.cpp  MakeupGain.h  PeakRmsMeter.cpp  PeakRmsMeter.h  SafetyLimiter.cpp  SafetyLimiter.h
app/src/main/cpp/engine/: MonitorOutputPath.cpp  MonitorOutputPath.h  OboeFullDuplexEngine.cpp  OboeFullDuplexEngine.h
app/src/main/cpp/jni/: native-lib.cpp
app/src/main/cpp/test/: CMakeLists.txt  test_biquad.cpp  test_encoder_pcm_converter.cpp  test_input_gain.cpp  test_monitor_output_path.cpp  test_peak_rms_meter.cpp  test_result.cpp  test_ring_buffer.cpp  test_safety_limiter.cpp  test_triple_buffer.cpp
app/src/main/java/com/aucampro/recorder/: AppContainer.kt  AuCamPROApplication.kt
app/src/main/java/com/aucampro/recorder/audio/: AudioDeviceRouter.kt  NativeEngineBridge.kt
app/src/main/java/com/aucampro/recorder/camera/: CameraCapabilityInspector.kt  CameraParams.kt  CameraSessionController.kt  CameraSessionMetrics.kt  CaptureRangeClamper.kt  ColorTemperatureConverter.kt  FocusController.kt  LuminanceHistogramReader.kt  ManualCaptureRequestFactory.kt  TapToFocusStateMachine.kt  TapToMeteringRegion.kt
app/src/main/java/com/aucampro/recorder/encoder/: AudioEncoder.kt  HiResAudioSink.kt  PcmDither.kt  VideoEncoder.kt  WavFileWriter.kt
app/src/main/java/com/aucampro/recorder/muxer/: MuxerController.kt  MuxerSampleRouter.kt  PtsClockDomain.kt  SegmentRotationPlanner.kt  SegmentedMuxerController.kt
app/src/main/java/com/aucampro/recorder/pipeline/: RecordingPipeline.kt
app/src/main/java/com/aucampro/recorder/service/: RecordingService.kt
app/src/main/java/com/aucampro/recorder/ui/: MainActivity.kt  MainScreen.kt
app/src/main/java/com/aucampro/recorder/ui/components/: AudioMeterBar.kt  FocusReticleOverlay.kt  FrameLineOverlay.kt  HistogramOverlay.kt  LevelGaugeOverlay.kt  ManualControlSlider.kt  PreviewSurfaceView.kt  SettingsBottomSheet.kt
app/src/main/java/com/aucampro/recorder/ui/theme/: AuCamPROTheme.kt
app/src/main/java/com/aucampro/recorder/ui/viewmodel/: CameraControlViewModel.kt  CameraUiState.kt
app/src/main/java/com/aucampro/recorder/utils/: DeviceOrientationTracker.kt  ThermalMonitor.kt  UserPreferencesStore.kt
app/src/main/java/com/procamera/recorder/: AppContainer.kt  ProCameraApplication.kt
app/src/main/java/com/procamera/recorder/audio/: NativeEngineBridge.kt
app/src/main/java/com/procamera/recorder/camera/: CameraCapabilityInspector.kt  CameraSessionController.kt  ColorTemperatureConverter.kt  FocusController.kt  TapToMeteringRegion.kt
app/src/main/java/com/procamera/recorder/encoder/: AudioEncoder.kt  PcmDither.kt  VideoEncoder.kt
app/src/main/java/com/procamera/recorder/muxer/: SegmentedMuxerController.kt
app/src/main/java/com/procamera/recorder/pipeline/: RecordingPipeline.kt
app/src/main/java/com/procamera/recorder/service/: RecordingService.kt
app/src/main/java/com/procamera/recorder/ui/: MainActivity.kt  MainScreen.kt
app/src/main/java/com/procamera/recorder/ui/components/: AudioMeterBar.kt  HistogramOverlay.kt  LevelGaugeOverlay.kt  ManualControlSlider.kt  PreviewSurfaceView.kt  SettingsBottomSheet.kt
app/src/main/java/com/procamera/recorder/ui/theme/: ProCameraTheme.kt
app/src/main/java/com/procamera/recorder/ui/viewmodel/: CameraControlViewModel.kt  CameraUiState.kt
app/src/main/java/com/procamera/recorder/utils/: UserPreferencesStore.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/aucampro/recorder/camera/: CameraSessionMetricsTest.kt  CaptureRangeClamperTest.kt  ColorTemperatureConverterTest.kt  TapToFocusStateMachineTest.kt  TapToMeteringRegionTest.kt
app/src/test/java/com/aucampro/recorder/encoder/: PcmDitherTest.kt  WavFileWriterTest.kt
app/src/test/java/com/aucampro/recorder/muxer/: MuxerSampleRouterTest.kt  PtsClockDomainTest.kt  SegmentRotationPlannerTest.kt
app/src/test/java/com/procamera/recorder/camera/: TapToMeteringRegionTest.kt
app/src/test/java/com/procamera/recorder/encoder/: PcmDitherTest.kt
app/src/test/java/com/procamera/recorder/muxer/: SegmentRotationPlannerTest.kt
docs/: ARCHITECTURE.md  AUDIO_INSTABILITY_INVESTIGATION_2026-07-18.md  EXTERNAL_HDMI_INPUT_DESIGN.md  HIRES_AUDIO_DESIGN.md  PERF_REINVESTIGATION_2026-07-17.md  SPEC.md  VIDEO_1080P24_ADDITION_2026-07-20.md
gradle/: libs.versions.toml
